# UFC-Web-Scraping

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  UFC 2022 Year in Review.ipynb  UFC Data SQL Upload.ipynb  UFC Events Scraper.ipynb  UFC Fight Stat Scraper.ipynb  UFC Fighters Scraper.ipynb  UFC Fights Scraper.ipynb  UFC SQL Database.ipynb  get_event_urls.py  get_fight_urls.py  get_fighter_urls.py  pyproject.toml  test.py  ufc_events_scraper.py  ufc_fight_scraper.py  ufc_fight_stats_scraper.py  ufc_fighters_scraper.py
fightodds/fightodds/: middlewares.py  settings.py
fightodds/fightodds/entities/: __init__.py  event.py  fighter.py
fightodds/fightodds/parsers/: event_parser.py  fight_odds_parser.py  fighter_info_parser.py  fighter_parser.py
scraped_files/: ufc_event_data.csv  ufc_fight_data.csv
src/: __init__.py  utils.py
src/fightodds/: scrapy.cfg
src/scraper/: events.py  fighters.py  fights.py  fightstats.py  normalise_tables.py
ufc_scraper/: constants.py  entities.py  parsers.py  scrapy.cfg  utils.py
ufc_scraper/data/: fighter_urls.csv  fights.csv
ufc_scraper/tests/: __init__.py  utils.py
ufc_scraper/ufc_scraper/: constants.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
ufc_web_scraper/: analysis.ipynb  main.ipynb  main.py  teste.ipynb
ufc_web_scraper/scraped_files/: ufc_event_data.csv  ufc_fight_data.csv  ufc_fight_stat_data.csv  ufc_fighter_data.csv
ufc_web_scraper/scraper/: events.py  fighters.py  fights.py  fightstats.py  get_urls.py
ufc_web_scraper/urls/: event_urls.csv  fight_urls.csv  fighter_urls.csv
ufcstats/: entities.py  scrapy.cfg
ufcstats/entities/: fight.py  fight_stats.py  fight_stats_by_round.py  fighter.py
ufcstats/ufcstats/: __init__.py  items.py  pipelines.py  settings.py
(+75 files in other folders)
