[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufc-web-scraping"
version = "0.1.0"
description = "Web scraping UFC data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glom>=25.12.0",
    "scrapy==2.13.3",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.5.0",
    "pytest>=9.0.2",
    "ruff==0.14.8",
    "pytest-mock>=3.15.1",
    "freezegun>=1.5.5",
]

[tool.mypy]
exclude = ["ufc_scraper/tests/", ".*/middlewares\\.py$", ".*/pipelines\\.py$", ".*/items\\.py$", ".*/settings\\.py$"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "D"]
ignore = ["D107"]
exclude = ["ufc_scraper/tests/**/*", "**/middlewares.py", "**/pipelines.py", "**/items.py", "**/settings.py"]

[tool.ruff.format]
quote-style = "double"
